chapter2/security_group.tf
resource "aws_security_group" "enve-ec2-web-server-sg" {
  name = "enve-ec2-web-server-sg"

  ingress {
    from_port   = 8080
    to_port     = 8080
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
}
